[gd_scene format=3 uid="uid://dr0fenfnqsha3"]

[ext_resource type="Texture2D" uid="uid://d327mbcq5lakc" path="res://assets/ui/start_menu/resources/start_menu_bg.png" id="1_dkj6a"]
[ext_resource type="Script" uid="uid://beoirwmdxe68h" path="res://assets/ui/start_menu/start_menu.gd" id="1_nhkli"]
[ext_resource type="Theme" uid="uid://djsw6wrf4tns" path="res://assets/ui/themes/main_theme.tres" id="3_qpjrb"]
[ext_resource type="LabelSettings" uid="uid://d0tvafk7ryytb" path="res://assets/ui/themes/main_title_theme.tres" id="4_qpjrb"]

[node name="StartMenu" type="Control" unique_id=1303556367]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qpjrb")
script = ExtResource("1_nhkli")

[node name="Background" type="TextureRect" parent="." unique_id=2020571347]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dkj6a")
expand_mode = 1
stretch_mode = 6

[node name="Content" type="VBoxContainer" parent="." unique_id=1827584633]
custom_minimum_size = Vector2(300, 500)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 89.0
offset_top = -250.0
offset_right = 389.0
offset_bottom = 250.0
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Content" unique_id=546501617]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "BEAST CARD CLASH"
label_settings = ExtResource("4_qpjrb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Space" type="Control" parent="Content" unique_id=487404265]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Content" unique_id=1085545832]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="Content/Buttons" unique_id=882021670]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Jugar"

[node name="TutorialButton" type="Button" parent="Content/Buttons" unique_id=370726803]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tutorial"

[node name="CreditsButton" type="Button" parent="Content/Buttons" unique_id=1698792371]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cr√©ditos"

[node name="QuitButton" type="Button" parent="Content/Buttons" unique_id=1708660283]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Salir"

[connection signal="pressed" from="Content/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Content/Buttons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Content/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Content/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
